Preparar primera versión 1.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,48 @@
-/vendor/
-node_modules/
+/vendor
+/.env
+/.env.*
+!/.env.example
+.phpunit.result.cache
+.phpunit.cache
+/storage/*.key
+/storage/pail
+/storage/*.log
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+/bootstrap/cache/*.php
+Homestead.json
+Homestead.yaml
+/.nova
+forge.deploy.sh
+.env.production
+/.idea
+/.zed
+/.fleet
+/public/storage
+/public/build
+/public/hot
+composer.phar
+auth.json
+/node_modules
 npm-debug.log
 yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+/resources/js/.vite
+resources/js/.vitepress
+resources/js/dist
+resources/js/.temp
+resources/js/.cache
+/.vscode
+/.phpactor.json
+/.phpstorm.meta.php
+/.history
+.DS_Store
+Thumbs.db
+*.bak
+*.tmp
+*.swp
+*.swo
+*~
+coverage/
+*.log
