--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.1",
+        "laravel/tinker": "^2.10.1",
+        "php-open-source-saver/jwt-auth": "^2.3",
+        "tymon/jwt-auth": "^2.2",
+        "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
